Implementado proyecto de cliente. Refactorizaciones de arreglo para el servidor (incluyendo trim)

--- a/SocketApp1/App.config
+++ b/SocketApp1/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <!-- Configuraciones personalizadas para conectar a mi aplicación (ip, puerto) -->
   <appSettings>
-    <add key="port" value="9000" /> <!-- ToDo: Verificar que el puerto funcione bien en Win10 -->
+    <add key="port" value="9000" /> 
     <add key="ip" value="127.0.0.1" /> <!-- IP 127.0.0.1 => localhost -->
   </appSettings>  
   
