--- a/SocketApp1_Cliente/App.config
+++ b/SocketApp1_Cliente/App.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+  <!-- Configuraciones personalizadas para conectar a mi aplicación (ip, puerto) -->
+  <appSettings>
+    <add key="port" value="9000" />
+    <add key="ip" value="127.0.0.1" />
+    <!-- IP 127.0.0.1 => localhost -->
+  </appSettings>
+  
+  <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 </configuration>
